# mina

./: .clang-format  .clang-tidy  .clangd  .codespellrc  .ctags  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  NOTES.md  README.md  mk  mk.py
include/mina/: base.h  cart.h  cartridge.h  cpu.h  gb.h  memory_map.h  sm83.h  sm83_opcodes.h  window.h
include/mina/cpu/: dmg.h  dmg_opcodes.h  dmg_reg.h
include/mina/gfx/: buffer.h  command.h  context.h  data.h  gpu_buffer.h  pipeline.h  swap_chain.h  sync.h  types.h  utils.h  vma.h  window.h
include/mina/meta/: info.h
include/mina/utils/: math.h  mem.h
src/: base.cpp  base.h  cart.cc  cartridge.cc  cpu.h  gb.cc  main.cc  main.cpp  memory.h  memory_map.cc  sm83.cc  window.cc
src/cpu/: dmg.cc  dmg.cpp
src/gfx/: buffer.cc  command.cc  context.cc  data.cc  gpu_buffer.cc  pipeline.cc  swap_chain.cc  sync.cc  utils.cc  vma.cc  window.cc
src/shaders/: triangle.frag  triangle.vert
src/utils/: math.h  mem.cpp  mem.h
test/: test_memory_map.cc  test_memory_map.cpp
